2009-07-31  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: bump version in AM_INIT_AUTOMAKE to 0.9.6cvs

2009-07-31  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: bump version in AM_INIT_AUTOMAKE to 0.9.5

2009-07-31  Andi Kleen   <ak@linux.intel.com>

	* events/i386/nehalem/events: Fix name of event 0xa7

2009-07-20  Jeffrey Yasskin  <jyasskin@google.com>

	* libutil++/bfd_support.h(find_nearest_line):
	* libutil++/bfd_support.cpp(find_nearest_line):
	* libutil++/op_bfd.h(op_bfd::get_linenr):
	* libutil++/op_bfd.cpp(op_bfd::get_linenr): Change the type of offset
	  from unsigned int to bfd_vma to accommodate addresses above 4G

2009-07-17  Maynard Johnson  <maynardj@us.ibm.com>

	* libutil++/bfd_support.cpp: Fix logic error from previous
	  patch to this file

2009-07-14  Maynard Johnson  <maynardj@us.ibm.com>

	* Makefile.am: Add ChangeLog-2008 to EXTRA_DIST

2009-07-10  Maynard Johnson  <maynardj@us.ibm.com>

	* libpp/profile_spec.cpp:
	* pp/oparchive.cpp:
	* utils/opcontrol:  Handle bad samples from kernel due to overflows

2009-06-29  Maynard Johnson  <maynardj@us.ibm.com>

	* events/ppc64/power7/events:
	* events/ppc64/power7/event_mappings: Update to IBM POWER7 events
	  and groups

2009-06-23  Maynard Johnson  <maynardj@us.ibm.com>

	* libutil++/bfd_support.cpp: Discard symbols from sections that do
	  not have SEC_LOAD flag set; this prevents issues with bogus symbol
	  size computation, resulting in "samples_range(): start > end" message

2009-06-23  Maynard Johnson  <maynardj@us.ibm.com>

	* libpp/profile_spec.cpp:
	* pp/common_option.cpp: Fix image-path option to be appended
	  to archive path

2009-06-18  Maynard Johnson  <maynardj@us.ibm.com>

	* libpp/format_output.h:
	* libpp/format_output.cpp: Make sure that all callgraph symbols are
	  reported, even if 0 samples

2009-06-05  William Cohen  <wcohen@redhat.com>

	* libutil++/bfd_support.cpp: Avoid calling bfd_find_nearest_line
	  with NULL syms argument
