@@ -51,6 +51,7 @@ typedef enum {
 	HELP_EVENT_DESC,
 	HELP_COUNTER_MASK,
 	HELP_MIN_COUNT,
+	HELP_EXT,
 	HELP_UNIT_MASKS,
 	HELP_DEFAULT_MASK,
 	HELP_UNIT_MASK,
